<resources>
    <string name="app_name">ToorGuide</string>
    <string name="Explo">Explore The City Beautiful</string>
    <string name="Malls">Malls</string>
    <string name="Historical">Historical Places</string>
    <string name="Food">Best Food Markets </string>
    <string name="Couples">Famous Couples Points</string>
    <string name="Clubs">Best Night clubs</string>
    <string name="Description">Elante Mall</string>
    <string name="Kitty">Kitty su,The Lalit</string>
    <string name="park">It park</string>
    <string name="para">Paara Club</string>
    <string name="centra">Centra mall</string>
    <string name="downing">10 Drowning street</string>
    <string name="industrial">Industrial Area phase2</string>
    <string name="score">Score</string>
    <string name="sec">sco 177,178, Sector 8-c</string>
    <string name="tao">sco43,sector 26</string>
    <string name="Tao">Tao</string>
    <string name="buzz">Buzz</string>
    <string name="sco">sco 45,46,sector 17-a</string>
    <string name="street">10 Downing street</string>
    <string name="indus">Industrial Area phase2</string>
    <string name="Fragrence">Fragrance Garden</string>
    <string name="sector">Sector 36 near mcm</string>
    <string name="lazer">Lazer valley</string>
    <string name="sex">"Sector 16 "</string>
    <string name="garden">Japanese Garden</string>
    <string name="sw">"Sector 32 "</string>
    <string name="palm">Palm Grden</string>
    <string name="swz">"Sector 42 "</string>
    <string name="lake">New Lake</string>
    <string name="sq">Sector 42</string>
    <string name="kunj">Santi kunj</string>
    <string name="sa">Sector 16</string>
    <string name="indian">Indian coffie House</string>
    <string name="st">sector 17-e</string>
    <string name="market">Shastri Market</string>
    <string name="sh">sector 22-c</string>
    <string name="swagat">Swagat Restraunt</string>
    <string name="sl">madhyamark sector-26</string>
    <string name="gasto"><![CDATA[Gasto Kitchen &caffe]]></string>
    <string name="sn">sector 7-c</string>
    <string name="ll">Raju chinese Food</string>
    <string name="bth">booth 225 patel market sector 15</string>
    <string name="night">Night good Street</string>
    <string name="punjab">gate no 1 punjab university</string>
    <string name="rock">Rock Garden</string>
    <string name="ol">"Sector 1 "</string>
    <string name="lak">Sukhna lake</string>
    <string name="kk">"Sector 5b "</string>
    <string name="lcar">LeCarbusier Center</string>
    <string name="jkk">"Sector 19c "</string>
    <string name="rose">Rose Garden</string>
    <string name="iooo">Sector 16a</string>
    <string name="qwerty">NepliForest</string>
    <string name="ppp">"Sector 27a "</string>
    <string name="opnhand">OpenHand Monument</string>
    <string name="qwe">"Sector 1 "</string>
    <string name="tpiary">Topiary Park</string>
    <string name="sdfg">"Sector 35 "</string>
    <string name="elante">Elante Mall</string>
    <string name="indu">Industrial Area</string>
    <string name="shalimar">Shalimar Mall</string>
    <string name="sety">Sector 8 ,Panchkula</string>
    <string name="pica">PicardlySqaure Mall</string>
    <string name="sd">Sector34a</string>
    <string name="ctra">Centra Mall</string>
    <string name="in">Industrial ARea phase1</string>
    <string name="north">NorthCountry Mall</string>
    <string name="phase">phase 7 Mohali</string>
    <string name="paras">Paras Mall</string>
    <string name="pkasee">phase 7 Mohali</string>
</resources>
