<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_choose_destination_type"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.toorguide.ChooseDestinationType">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e0ffff"
            android:orientation="vertical">
            <TextView
                android:id="@+id/place1"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginBottom="16dp"
                android:background="#ffa500"
                android:text="@string/Malls"
                android:textColor="@android:color/background_light"
                android:textSize="30sp" />
            <TextView
                android:id="@+id/place2"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginBottom="16dp"
                android:background="#ff4500"
                android:text="@string/Historical"
                android:textColor="@android:color/background_light"
                android:textSize="30sp" />
            <TextView
                android:id="@+id/place3"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginBottom="16dp"
                android:background="#8b8682"
                android:text="@string/Clubs"
                android:textColor="@android:color/background_light"
                android:textSize="30sp" />
            <TextView
                android:id="@+id/place4"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginBottom="16dp"
                android:background="#8a2be2"
                android:text="@string/Food"
                android:textColor="@android:color/background_light"
                android:textSize="30sp" />
            <TextView
                android:id="@+id/place5"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginBottom="16dp"
                android:background="#006400"
                android:text="@string/Couples"
                android:textColor="@android:color/background_light"
                android:textSize="30sp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
